--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "node-sass": "6.0.1",
+    "node-sass-package-importer": "5.3.2"
   },
   "devDependencies": {
-    "node-sass": "6.0.1",
-    "node-sass-package-importer": "5.3.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/reactstrap": "^8.7.2",
