Add Header app information

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_WS_PROVIDER=ws://127.0.0.1:9944
+REACT_APP_POLKADOT_APP_SPARTAN=https://polkadot.js.org/apps/?rpc=ws://localhost:9944#/explorer/query
