--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "allowJs": true
   },
   "include": [
     "src"
