--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "@polkadot/util": "^7.4.1",
     "bn.js": "^5.2.0",
     "dotenv": "^10.0.0",
+    "levelup": "^5.1.1",
     "node-fetch": "^2.6.1",
     "pino": "^6.13.2",
     "pino-pretty": "^7.0.1",
+    "rocksdb": "^5.1.1",
     "rxjs": "^7.3.0"
   },
   "devDependencies": {
