--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,14 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "@polkadot/api": "^6.0.5",
-    "@polkadot/keyring": "^7.4.1",
-    "@polkadot/util": "^7.4.1",
+    "@interlay/interbtc-types": "^1.1.1",
+    "@kiltprotocol/type-definitions": "^0.1.23",
+    "@parallel-finance/type-definitions": "^1.4.2",
+    "@phala/typedefs": "^0.2.29",
+    "@polkadot/api": "^6.4.3-9",
+    "@polkadot/keyring": "^7.6.1",
+    "@polkadot/types": "^6.4.3-9",
+    "@polkadot/util": "^7.6.1",
     "dotenv": "^10.0.0",
     "levelup": "^5.1.1",
     "node-fetch": "^2.6.1",
