--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,10 @@
   "author": "",
   "license": "Apache 2.0",
   "dependencies": {
-    "@polkadot/api": "^6.4.3-9",
-    "@polkadot/keyring": "^7.6.1",
-    "@polkadot/types": "^6.4.3-9",
-    "@polkadot/util": "^7.6.1",
+    "@polkadot/api": "^6.6.1",
+    "@polkadot/keyring": "^7.7.1",
+    "@polkadot/types": "^6.6.1",
+    "@polkadot/util": "^7.7.1",
     "dotenv": "^10.0.0",
     "levelup": "^5.1.1",
     "node-fetch": "^2.6.1",
