updated docs. add block downloader instructions. added chain-data directory to dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:16-alpine
 
+RUN mkdir -p /home/relayer/relayer-backend/chain-data 
+
 WORKDIR /home/relayer/relayer-backend
 
 COPY package*.json ./
