--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "pino": "^6.13.2",
     "pino-pretty": "^7.0.1",
     "rocksdb": "^5.1.1",
-    "rxjs": "^7.3.0"
+    "rxjs": "^7.3.0",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/pino": "^6.3.11",
