--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "resolveJsonModule": true,
   },
   "include": [
