--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tap --ts",
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "build": "tsc",
@@ -29,10 +29,12 @@
   },
   "devDependencies": {
     "@types/pino": "^6.3.11",
+    "@types/tap": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "eslint-plugin-eslint-plugin": "^3.5.3",
+    "tap": "^15.0.10",
     "typescript": "^4.4.2"
   }
 }
