--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "levelup": "^5.1.1",
     "node-fetch": "^2.6.1",
+    "p-retry": "^4.6.1",
     "pino": "^6.13.2",
     "pino-pretty": "^7.0.1",
     "rocksdb": "^5.1.1",
