--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -5,5 +5,6 @@
 !tsconfig.json
 !package.json
 !package-lock.json
-!config.json
 !entrypoint.sh
+# TODO: config.json provided by user, not hardcoded, need help with this one.
+!config.json
