--- a/.github/workflows/gh-container-image.yml
+++ b/.github/workflows/gh-container-image.yml
@@ -4,12 +4,9 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 env:
-  IMAGE_NAME: subspace-relayer
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/subspace-relayer:lastest
 
 jobs:
   push:
@@ -29,8 +26,4 @@ jobs:
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push image
-        run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          docker tag $IMAGE_NAME $IMAGE_ID:latest
-          docker push $IMAGE_ID:latest
+        run: docker push $IMAGE_NAME
