--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,11 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "build": "tsc",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prefund": "npm run build",
+    "fund": "node dist/tools/fund-accounts.js",
+    "precreate-feeds": "npm run build",
+    "create-feeds": "node dist/tools/create-feeds.js"
   },
   "keywords": [],
   "author": "",
