update npm scripts
minor

minor

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "test": "tap --ts",
     "prestart": "npm run build",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "lint": "eslint . --ext .ts",
-    "prefund": "npm run build",
-    "fund": "node dist/tools/fund-accounts.js",
-    "precreate-feeds": "npm run build",
-    "create-feeds": "node dist/tools/create-feeds.js"
+    "presetup": "npm run build",
+    "setup": "node dist/tools/create-feeds.js && node dist/tools/fund-accounts.js",
+    "predownload": "npm run build",
+    "download": "node dist/tools/download-substrate-blocks.js",
+    "prefetch": "npm run build",
+    "fetch": "node dist/tools/start-fetching-blocks-to-archive.js"
   },
   "keywords": [],
   "author": "",
