--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-eslint-plugin": "^3.5.3",
     "tap": "^15.0.10",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.2"
   }
 }
