--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "bootstrap": "4.6.0",
     "classnames": "2.3.1",
     "date-fns": "^2.25.0",
-    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-ceee524a8-20211217",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -24,10 +23,11 @@
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-ceee524a8-20211217",
     "node-sass": "6.0.1",
     "node-sass-package-importer": "5.3.2",
     "react-scripts": "5.0.0",
-    "typescript": "4.5"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
