--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.2.1-rc.0-next-ceee524a8-20211217",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "node-sass": "6.0.1",
     "node-sass-package-importer": "5.3.2",
     "react-scripts": "5.0.0",
