added prom client and metrics endpoint

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "p-retry": "^4.6.1",
     "pino": "^6.13.2",
     "pino-pretty": "^7.0.1",
+    "prom-client": "^14.0.1",
     "rocksdb": "^5.1.1",
     "zod": "^3.11.6"
   },
