--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,8 @@
     "pino-pretty": "^7.0.1",
     "prom-client": "^14.0.1",
     "rocksdb": "^5.1.1",
+    "web3": "^1.7.1",
+    "web3-eth": "^1.7.1",
     "zod": "^3.11.6"
   },
   "devDependencies": {
