--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "build": "rm -rf dist && tsc",
     "lint": "eslint . --ext .ts",
     "presetup": "npm run build",
-    "setup": "node dist/tools/fund-accounts.js && node dist/tools/create-feeds.js",
+    "setup": "node dist/tools/create-feeds.js",
     "predownload": "npm run build",
     "download": "node dist/tools/download-substrate-blocks.js",
     "prefetch": "npm run build",
-    "fetch": "node dist/tools/continuous-fetch-blocks-to-archive.js"
+    "fetch": "node dist/tools/continuous-fetch-blocks-to-archive.js",
+    "prebalances": "npm run build",
+    "balances": "node dist/tools/list-account-balances.js",
   },
   "keywords": [],
   "author": "",
