address PR comments

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,11 @@
     "start": "node dist/index.js",
     "build": "rm -rf dist && tsc",
     "lint": "eslint . --ext .ts",
-    "presetup": "npm run build",
-    "setup": "node dist/tools/create-feeds.js",
-    "predownload": "npm run build",
-    "download": "node dist/tools/download-substrate-blocks.js",
-    "prefetch": "npm run build",
-    "fetch": "node dist/tools/continuous-fetch-blocks-to-archive.js",
-    "prebalances": "npm run build",
-    "balances": "node dist/tools/list-account-balances.js"
+    "create-feeds": "npm run build; node dist/tools/create-feeds.js",
+    "download": "npm run build; node dist/tools/download-substrate-blocks.js",
+    "fetch": "npm run build; node dist/tools/continuous-fetch-blocks-to-archive.js",
+    "balances": "npm run build; node dist/tools/list-account-balances.js",
+    "fund": "npm run build; node dist/tools/fund-accounts.js"
   },
   "keywords": [],
   "author": "",
