--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -1,8 +1,11 @@
-name = "relayer"
 type = "webpack"
-route = "aries-dev-relayer.subspace.network/*"
-usage_model = ""
-compatibility_flags = []
-workers_dev = false
-site = {bucket = "./build", entry-point = "workers-site"}
+workers_dev = true
+site = { bucket = "build" }
+main = "workers-site/index.js"
 compatibility_date = "2021-10-20"
+name = "aries-dev-relayer-frontend"
+route = "aries-dev-relayer.subspace.network/*"
+
+[env.production]
+name = "relayer"
+route = "testnet-relayer.subspace.network/*"
