--- a/.github/workflows/wrangler-publish.yaml
+++ b/.github/workflows/wrangler-publish.yaml
@@ -24,6 +24,5 @@ jobs:
       - run: 'wrangler publish'
         working-directory: frontend
         env:
-          CF_ACCOUNT_ID: ${{secrets.CF_ACCOUNT_ID}}
-          CF_ZONE_ID: ${{secrets.CF_ZONE_ID}}
-          CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
+          CLOUDFLARE_ACCOUNT_ID: ${{secrets.CLOUDFLARE_ACCOUNT_ID}}
+          CLOUDFLARE_API_TOKEN: ${{secrets.CLOUDFLARE_API_TOKEN}}
